@@ -41,7 +41,9 @@ They can be used to set the following global variables:
   addresses but returns them in reverse order (which means that the
   most recent address in m_inmail database is first).  If you set this
   to "name", lbdbq sorts the output by real name.  If you set this to
-  "address", lbdbq sorts the output by addresses (that's the default).
+  "comment", it sort the output by the comment (for example the date
+  in m_inmail). If you set this to "address", lbdbq sorts the output
+  by addresses (that's the default).
 
 
 Note that there _are_ defaults, so you should most probably modify
