@@ -8,8 +8,10 @@ lbdb (0.28.1) unstable; urgency=low
   * m_passwd: Ignore system accounts (UIDs, which aren't in the range
     1000-29999 on a Debian system), if PASSWD_IGNORESYS=true is set
     (Closes: #188085).
+  * Allow sorting the output by "comment" field (column 3) by setting
+    SORT_OUTPUT=comment (Closes: #225104).
 
- -- Roland Rosenfeld <roland@debian.org>  Sun, 18 Jan 2004 14:23:33 +0100
+ -- Roland Rosenfeld <roland@debian.org>  Sun, 18 Jan 2004 14:50:08 +0100
 
 lbdb (0.28) unstable; urgency=low
 
